--- a/index.html
+++ b/index.html
@@ -12,25 +12,26 @@
 </head>
 <body>
 <!-- Navigation Bar -->
-    <ul class="nav nav-tabs">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Lynn Mach | Portfolio </a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Projects</a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Weather App</a></li>
-            <li><a class="dropdown-item" href="#">Personal Artwork</a></li>
-            <li><a class="dropdown-item" href="#">Skills & Experience</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Link to Social Media here</a></li>
-          </ul>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Contact Me</a>
-        </li>
-        
-      </ul>    
+<nav class="navbar navbar-fixed-top navbar-default">
+  <div class="container">
+      <button type="button" class="navbar-toggle">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      
+    <nav class="navbar-fullscreen" id="navbar-middle">
+      <button type="button" class="close" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+      <ul class="navbar-fullscreen-links">
+        <li><a href="./index.html" title="">Home</a></li>
+        <li><a href="./project.html" title="">Project</a></li>
+        <li><a href="./about.html" title="">About me</a></li>
+        <li><a href="./components.html" title="">Components</a></li>
+      </ul>
+</nav>
+
+
 <!-- Intro on Left -->
 <div class="container">
   <div class="row">
@@ -49,6 +50,6 @@
 
 
 
-
+<script src="src/index.js"></script>
 </body>
 </html>
