--- a/index.html
+++ b/index.html
@@ -7,29 +7,16 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <link href="/src/styles.css" rel="stylesheet" type="text/css" />
-    
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <title>LYNN MACH | ACCOUNTANT</title>
 </head>
 <body>
-<!-- Navigation Bar -->
-<nav class="navbar navbar-fixed-top navbar-default">
-  <div class="container">
-      <button type="button" class="navbar-toggle">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      
-    <nav class="navbar-fullscreen" id="navbar-middle">
-      <button type="button" class="close" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-      <ul class="navbar-fullscreen-links">
-        <li><a href="./index.html" title="">Home</a></li>
-        <li><a href="./project.html" title="">Project</a></li>
-        <li><a href="./about.html" title="">About me</a></li>
-        <li><a href="./components.html" title="">Components</a></li>
-      </ul>
-</nav>
+<section class="main">
+  <header>
+    <h1>Lynn Mach</h1>
+    <div class="toggle"></div>
+      </header>
+
 
 
 <!-- Intro on Left -->
@@ -49,7 +36,23 @@
   </div> </div>
 
 
+</section>
 
-<script src="src/index.js"></script>
+<!-- Navigation Bar -->
+<!--Menu toggle bar to the right -->  
+<div class="menu">
+  <ul>
+    <li><a href="https://www.linkedin.com/in/lmach99/"; target="_blank">LinkedIn</a></li>
+    <li><a href="https://www.instagram.com/lmach999/"; target="_blank">Instagram</a></li>
+    <li><a href="https://github.com/Giggles999"; target="_blank">Github</a></li>
+    <li><a href="https://codesandbox.io/u/Giggles999"; target="_blank">CodeSandbox</a></li>
+  </ul>
+
+</div>
+
+
+
+
+<script src="/src/index.js"></script>
 </body>
 </html>
