creating toggle menu/navi

--- a/index.html
+++ b/index.html
@@ -4,51 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>LYNN MACH | ACCOUNTANT</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <link href="/src/styles.css" rel="stylesheet" type="text/css" />
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <title>LYNN MACH | ACCOUNTANT</title>
+    <link rel="stylesheet" href="resetstyle.css">
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
-<section class="main">
-  <header>
-    <h1>Lynn Mach</h1>
-    <div class="toggle"></div>
-      </header>
-
-
-
 <!-- Intro on Left -->
-<div class="container">
-  <div class="row">
-    
-    <div class="col-md-6">
-      <h2>Hi, I'm Lynn, an Accountant who knows likes to code for fun based out of Seattle, WA</h2>
-    </div>
-    
-    <div class="col-md-6">
-      <h2>MY WORK </h2>
-        <li> Weather App </li>
-        <li> Personal Artwork </li>
-    </div> 
+  <nav class="nav-main">
+    <div class="btn-toggle-nav"></div>
+      <ul>
+        <li><a href="https://www.linkedin.com/in/lmach99/"; target="_blank">LinkedIn</a></li>
+        <li><a href="https://www.instagram.com/lmach999/"; target="_blank">Instagram</a></li>
+        <li><a href="https://github.com/Giggles999"; target="_blank">Github</a></li>
+        <li><a href="https://codesandbox.io/u/Giggles999"; target="_blank">CodeSandbox</a></li>
+      </ul>   
+  </nav>
 
-  </div> </div>
+  <aside class="nav-sidebar">
+    <ul>
+      <li><span>Projects</span></li>
+      <li><a href="">Weather App</a></li>
+      <li><a href="">Artwork</a></li>
+      <li><a href="">Something</a></li>
+    </ul> 
+  </aside>
 
 
-</section>
 
-<!-- Navigation Bar -->
-<!--Menu toggle bar to the right -->  
-<div class="menu">
-  <ul>
-    <li><a href="https://www.linkedin.com/in/lmach99/"; target="_blank">LinkedIn</a></li>
-    <li><a href="https://www.instagram.com/lmach999/"; target="_blank">Instagram</a></li>
-    <li><a href="https://github.com/Giggles999"; target="_blank">Github</a></li>
-    <li><a href="https://codesandbox.io/u/Giggles999"; target="_blank">CodeSandbox</a></li>
-  </ul>
 
-</div>
+
+
+
 
 
 
@@ -56,3 +46,10 @@
 <script src="/src/index.js"></script>
 </body>
 </html>
+
+
+
+
+
+
+
