--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 <!-- Intro on Left -->
   <nav class="nav-main">
-    <div class="btn-toggle-nav"></div>
+    <div class="btn-toggle-nav" onclick="toggleNav()"></div>
       <ul>
         <li><a href="https://www.linkedin.com/in/lmach99/"; target="_blank">LinkedIn</a></li>
         <li><a href="https://www.instagram.com/lmach999/"; target="_blank">Instagram</a></li>
