Added Font Awesome
included images to top nav bar

--- a/index.html
+++ b/index.html
@@ -10,17 +10,16 @@
     <link href="/src/styles.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="resetstyle.css">
     <link rel="stylesheet" href="style.css">
-
+    <script src="https://kit.fontawesome.com/9eddac31be.js" crossorigin="anonymous"></script>
 </head>
 <body>
 <!-- Intro on Left -->
   <nav class="nav-main">
     <div class="btn-toggle-nav" onclick="toggleNav()"></div>
       <ul>
-        <li><a href="https://www.linkedin.com/in/lmach99/"; target="_blank">LinkedIn</a></li>
-        <li><a href="https://www.instagram.com/lmach999/"; target="_blank">Instagram</a></li>
-        <li><a href="https://github.com/Giggles999"; target="_blank">Github</a></li>
-        <li><a href="https://codesandbox.io/u/Giggles999"; target="_blank">CodeSandbox</a></li>
+        <li><a href="https://www.linkedin.com/in/lmach99/"; target="_blank"> <i class="fab fa-linkedin"></i> LinkedIn</a></li>
+        <li><a href="https://www.instagram.com/lmach999/"; target="_blank"> <i class="fab fa-instagram"></i> Instagram</a></li>
+        <li><a href="https://github.com/Giggles999"; target="_blank"><i class="fab fa-github"></i> Github</a></li>
       </ul>   
   </nav>
 
