create homepage hero

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="https://kit.fontawesome.com/9eddac31be.js" crossorigin="anonymous"></script>
 </head>
 <body>
-<!-- Intro on Left -->
+<!-- Top Navigation Bar -->
   <nav class="nav-main">
     <div class="btn-toggle-nav" onclick="toggleNav()"></div>
       <ul>
@@ -23,7 +23,7 @@
 
       </ul>   
   </nav>
-
+<!-- Left Toggle Navigation Bar -->
   <aside class="nav-sidebar">
     <ul>
       <li><span>Projects</span></li>
@@ -33,7 +33,13 @@
     </ul> 
   </aside>
 
-
+<!-- Homepage Hero -->
+  <div class="hero">
+  <p>Hello, I am </p>
+  <h1>Lynn Mach</h1>
+  <h2>Front-end developer based in Seattle, WA</h2>
+  <a href="#" class="btn btn-primary">More...</a>
+</div>
 
 
 
