Updated style for hero

--- a/index.html
+++ b/index.html
@@ -35,10 +35,13 @@
 
 <!-- Homepage Hero -->
   <div class="hero">
-  <p>Hello, I am </p>
-  <h1>Lynn Mach</h1>
-  <h2>Front-end developer based in Seattle, WA</h2>
-  <a href="#" class="btn btn-primary">More...</a>
+    <p>Hello, I am </p>
+    <h1>Lynn Mach</h1>
+    <h2 class="mb-5 text-wrap">Front-end developer based in Seattle, WA</h2>
+
+    <div>
+    <a href="#" class="btn btn-branding">More...</a>
+      </div>
 </div>
 
 
