Add images and include container

--- a/index.html
+++ b/index.html
@@ -44,9 +44,44 @@
       </div>
 </div>
 
+<!-- Adding content -->
+<div class="container">
+  <div class="row">
+      <div class="col-md-6">
+          <img src="images/yoga.jpg" class="img-fluid rounded shadow-sm p-2 border" />
+               </div>
+      <div class="col-md-6">
+          <h2>Yoga app </h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione 
+          veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore.
+          Launch </p>
+          <a href="https://www.shecodes.io/" class="btn shadow-lg w-100 primary-link">Launch Yoga App</a>
+  </div> </div> 
 
+  <div class="row mt-5">
+      <div class="col-md-6">
+          <h2>Weather app </h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione 
+          veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore.
+          Launch </p>
+          <a href="https://www.shecodes.io/" class="btn shadow-lg w-100 primary-link">Launch Weather App</a> 
+              </div>
+      <div class="col-md-6">
+          <img src="images/weather.PNG" class="img-fluid rounded shadow-sm p-2 border" />
+  </div> </div> 
 
+  <div class="row mt-5">
+      <div class="col-md-6">
+          <img src="images/yogurt.jpg" class="img-fluid rounded shadow-sm p-2 border" />
+               </div>
+      <div class="col-md-6">
+          <h2>Yogurt app </h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione 
+          veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore.</p>
+          <a href="https://www.shecodes.io/"  class="btn shadow-lg w-100 primary-link"> Launch Yogurt App</a>
+  </div> </div> 
 
+</div> 
 
 
 
