linked about to index

--- a/about.html
+++ b/about.html
@@ -33,15 +33,12 @@
     </ul> 
   </aside>
 
-<!-- Homepage Hero -->
-  <div class="hero">
-    <p>Hello, I am </p>
-    <h1>Lynn Mach</h1>
+<!-- About Me -->
+  <div class="hero-about-me">
+    <h1>Hi My name is Lynn Mach</h1>
+    <p>A little about me...... </p>
     <h2 class="mb-5 text-wrap">Front-end developer based in Seattle, WA</h2>
 
-    <div>
-    <a href="#" class="btn btn-branding">About Me</a>
-      </div>
 </div>
 
 <!-- Adding content -->
