--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <h2 class="mb-5 text-wrap">Front-end developer based in Seattle, WA</h2>
 
     <div>
-    <a href="#" class="btn btn-branding">About Me</a>
+    <a href="/about.html" class="btn btn-branding">About Me</a>
       </div>
 </div>
 
