structure about page

--- a/about.html
+++ b/about.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LYNN MACH | ABOUT ME</title>
+    <title>LYNN MACH | ACCOUNTANT</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="/src/styles.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="resetstyle.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/src/styles.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/9eddac31be.js" crossorigin="anonymous"></script>
 </head>
@@ -33,55 +33,31 @@
     </ul> 
   </aside>
 
-<!-- About Me -->
-  <div class="hero-about-me">
-    <h1>Hi My name is Lynn Mach</h1>
-    <p>A little about me...... </p>
-    <h2 class="mb-5 text-wrap">Front-end developer based in Seattle, WA</h2>
+<!-- About Me Hero -->
+<h1>ABOUT ME</h1>
+<p>Accountant/Front-end developer based in Seattle, WA</p>
+<div class="about-paragraph">
+    <img src="/images/me.jpg" class="img-fluid rounded shadow-sm p-2 border"/>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam aperiam provident tempora? 
+        Cumque adipisci, non dolorem quia, odit qui alias veniam excepturi rem dolor fugit dignissimos, 
+        sed voluptatum blanditiis harum.
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam aperiam provident tempora? 
+        Cumque adipisci, non dolorem quia, odit qui alias veniam excepturi rem dolor fugit dignissimos, 
+        sed voluptatum blanditiis harum.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam aperiam provident tempora? 
+        Cumque adipisci, non dolorem quia, odit qui alias veniam excepturi rem dolor fugit dignissimos,
+        sed voluptatum blanditiis harum.
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam aperiam provident tempora? 
+        Cumque adipisci, non dolorem quia, odit qui alias veniam excepturi rem dolor fugit dignissimos, 
+        sed voluptatum blanditiis harum.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam aperiam provident tempora? 
+        Cumque adipisci, non dolorem quia, odit qui alias veniam excepturi rem dolor fugit dignissimos,
+        sed voluptatum blanditiis harum.
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam aperiam provident tempora? 
+        Cumque adipisci, non dolorem quia, odit qui alias veniam excepturi rem dolor fugit dignissimos, 
+        sed voluptatum blanditiis harum.</p>    
 
 </div>
-
-<!-- Adding content -->
-<div class="container">
-  <div class="row">
-      <div class="col-md-6">
-          <img src="images/yoga.jpg" class="img-fluid rounded shadow-sm p-2 border" />
-               </div>
-      <div class="col-md-6">
-          <h2>Yoga app </h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione 
-          veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore.
-          Launch </p>
-          <a href="https://www.shecodes.io/" class="btn shadow-lg w-100 primary-link">Launch Yoga App</a>
-  </div> </div> 
-
-  <div class="row mt-5">
-      <div class="col-md-6">
-          <h2>Weather app </h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione 
-          veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore.
-          Launch </p>
-          <a href="https://www.shecodes.io/" class="btn shadow-lg w-100 primary-link">Launch Weather App</a> 
-              </div>
-      <div class="col-md-6">
-          <img src="images/weather.PNG" class="img-fluid rounded shadow-sm p-2 border" />
-  </div> </div> 
-
-  <div class="row mt-5">
-      <div class="col-md-6">
-          <img src="images/yogurt.jpg" class="img-fluid rounded shadow-sm p-2 border" />
-               </div>
-      <div class="col-md-6">
-          <h2>Yogurt app </h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione 
-          veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore.</p>
-          <a href="https://www.shecodes.io/"  class="btn shadow-lg w-100 primary-link"> Launch Yogurt App</a>
-  </div> </div> 
-
-</div> 
-
-
-
 
 
 <script src="/src/index.js"></script>
