--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
   <aside class="nav-sidebar">
     <ul>
       <li><span>Projects</span></li>
-      <li><a href="">Weather App</a></li>
-      <li><a href="">Artwork</a></li>
-      <li><a href="">Something</a></li>
+      <li><a href="/index.html">Weather App</a></li>
+      <li><a href="/index.html">Artwork</a></li>
+      <li><a href="/index.html">Something</a></li>
     </ul> 
   </aside>
 
