Updated css for about page

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LYNN MACH | ACCOUNTANT</title>
+    <title>LYNN MACH | ABOUT</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="/src/styles.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="resetstyle.css">
@@ -34,8 +34,9 @@
   </aside>
 
 <!-- About Me Hero -->
+<div class="hero">
 <h1>ABOUT ME</h1>
-<p>Accountant/Front-end developer based in Seattle, WA</p>
+<h2>Accountant/Front-end developer based in Seattle, WA</h2>
 <div class="about-paragraph">
     <img src="/images/me.jpg" class="img-fluid rounded shadow-sm p-2 border"/>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam aperiam provident tempora? 
@@ -57,6 +58,7 @@
         Cumque adipisci, non dolorem quia, odit qui alias veniam excepturi rem dolor fugit dignissimos, 
         sed voluptatum blanditiis harum.</p>    
 
+</div>
 </div>
 
 
