updated portfolio image size

--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
 <h1>ABOUT ME</h1>
 <h2>Accountant/Front-end developer based in Seattle, WA</h2>
 <div class="about-paragraph">
-    <img src="/images/me.jpg" class="img-fluid rounded shadow-sm p-2 border"/>
+    <img src="/images/me.jpg" class="img-fluid rounded shadow-sm p-2 border" width="400" height="400"/>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam aperiam provident tempora? 
         Cumque adipisci, non dolorem quia, odit qui alias veniam excepturi rem dolor fugit dignissimos, 
         sed voluptatum blanditiis harum.
