structure project page

--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
     <div>
     <a href="/about.html" class="btn btn-branding">About Me</a>
       </div>
+
+    <div>
+    <a href="/projects.html" class="btn btn-branding">My Projects</a>
+      </div>
 </div>
 
 
