--- a/projects.html
+++ b/projects.html
@@ -14,15 +14,36 @@
 </head>
 <body>
 <!-- Top Navigation Bar -->
-  <nav class="nav-main">
-    <div class="btn-toggle-nav" onclick="toggleNav()"></div>
-      <ul>
-        <li><a href="https://www.linkedin.com/in/lmach99/"; target="_blank"> <i class="fab fa-linkedin"></i> LinkedIn</a></li>
-        <li><a href="https://www.instagram.com/lmach999/"; target="_blank"> <i class="fab fa-instagram"></i> Instagram</a></li>
-        <li><a href="https://github.com/Giggles999"; target="_blank"><i class="fab fa-github"></i> Github</a></li>
 
-      </ul>   
-  </nav>
+<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+    <div class="btn-toggle-nav" onclick="toggleNav()"><img src="/images/toggle.PNG" width="50"/></div>
+    <div class="container-fluid">
+        <a class="navbar-brand" href="/index.html">Lynn Mach
+            </a>
+        <button 
+            class="navbar-toggler"        
+            type="button" 
+            data-bs-toggle="collapse" 
+            data-bs-target="#navbarNavAltMarkup" 
+            aria-controls="navbarNavAltMarkup" 
+            aria-expanded="false" 
+            aria-label="Toggle navigation">
+                
+            <span class="navbar-toggler-icon"></span>
+         </button>
+         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+           <div class="navbar-nav">
+             <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+             <a class="nav-link" href="/about.html">About</a>
+             <a class="nav-link" href="/about.html#lets_connect">Contact</a>  
+             <a class="nav-link" href="https://www.linkedin.com/in/lmach99/"; target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a></li>
+             <a class="nav-link" href="https://www.instagram.com/lmach999/"; target="_blank"><i class="fab fa-instagram"></i> Instagram</a></li>
+             <a class="nav-link" href="https://github.com/Giggles999"; target="_blank"><i class="fab fa-github"></i> Github</a></li>
+                </div>
+            </div>
+        </div>
+    </nav>
+
 <!-- Left Toggle Navigation Bar -->
   <aside class="nav-sidebar">
     <ul>
