updating nav bar and toggle

--- a/projects.html
+++ b/projects.html
@@ -14,7 +14,6 @@
 </head>
 <body>
 <!-- Top Navigation Bar -->
-
 <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
     <div class="btn-toggle-nav" onclick="toggleNav()"><img src="/images/toggle.PNG" width="50"/></div>
     <div class="container-fluid">
@@ -33,9 +32,6 @@
          </button>
          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
            <div class="navbar-nav">
-             <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
-             <a class="nav-link" href="/about.html">About</a>
-             <a class="nav-link" href="/about.html#lets_connect">Contact</a>  
              <a class="nav-link" href="https://www.linkedin.com/in/lmach99/"; target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a></li>
              <a class="nav-link" href="https://www.instagram.com/lmach999/"; target="_blank"><i class="fab fa-instagram"></i> Instagram</a></li>
              <a class="nav-link" href="https://github.com/Giggles999"; target="_blank"><i class="fab fa-github"></i> Github</a></li>
@@ -43,16 +39,18 @@
             </div>
         </div>
     </nav>
-
-<!-- Left Toggle Navigation Bar -->
-  <aside class="nav-sidebar">
-    <ul>
-      <li><span>Projects</span></li>
-      <li><a href="/index.html">Weather App</a></li>
-      <li><a href="/index.html">Artwork</a></li>
-      <li><a href="/index.html">Something</a></li>
-    </ul> 
-  </aside>
+  <!-- Left Toggle Navigation Bar -->
+    <aside class="nav-sidebar">
+      <ul>
+        <li><a href="/about.html">About Me</a></li>
+        <li><a href="/about.html">Contact</a></li>
+        <li><a href="/about.html">Something</a></li>
+        <li><span>Projects</span></li>
+        <li><a href="/index.html">Weather App</a></li>
+        <li><a href="/index.html">Artwork</a></li>
+        <li><a href="/index.html">Something</a></li>
+      </ul> 
+    </aside>
 
 <!-- Homepage Hero -->
 <div class="hero">
