--- a/projects.html
+++ b/projects.html
@@ -46,9 +46,9 @@
         <li><a href="/about.html">Contact</a></li>
         <li><a href="/about.html">Something</a></li>
         <li><span>Projects</span></li>
-        <li><a href="/index.html">Weather App</a></li>
-        <li><a href="/index.html">Artwork</a></li>
-        <li><a href="/index.html">Something</a></li>
+        <li><a href="/projects.html">Weather App</a></li>
+        <li><a href="https://www.lynnmach.com/">Artwork</a></li>
+        <li><a href="/projects.html">Something</a></li>
       </ul> 
     </aside>
 
