--- a/projects.html
+++ b/projects.html
@@ -47,7 +47,7 @@
         <li><a href="/about.html">Something</a></li>
         <li><span>Projects</span></li>
         <li><a href="/projects.html">Weather App</a></li>
-        <li><a href="https://www.lynnmach.com/">Artwork</a></li>
+        <li><a href="/projects.html">Artwork</a></li>
         <li><a href="/projects.html">Something</a></li>
       </ul> 
     </aside>
