Added Contact Page

--- a/contact.html
+++ b/contact.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LYNN MACH | ABOUT</title>
+    <title>LYNN MACH | HOMEPAGE</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="/src/styles.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="resetstyle.css">
-    <link rel="stylesheet" href="/src/styles.css">
+    <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/9eddac31be.js" crossorigin="anonymous"></script>
 </head>
@@ -52,42 +52,45 @@
     </ul> 
   </aside>
 
-<!-- About Me Hero -->
-<div class="hero">
-<h1>ABOUT ME</h1>
-<h2>Accountant/Front-end developer based in Seattle, WA</h2>
-<div class="about-paragraph">
-    <img src="/images/me.jpg" class="img-fluid rounded shadow-sm p-2 border" width="400" height="400"/>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam aperiam provident tempora? 
-        Cumque adipisci, non dolorem quia, odit qui alias veniam excepturi rem dolor fugit dignissimos, 
-        sed voluptatum blanditiis harum.
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam aperiam provident tempora? 
-        Cumque adipisci, non dolorem quia, odit qui alias veniam excepturi rem dolor fugit dignissimos, 
-        sed voluptatum blanditiis harum.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam aperiam provident tempora? 
-        Cumque adipisci, non dolorem quia, odit qui alias veniam excepturi rem dolor fugit dignissimos,
-        sed voluptatum blanditiis harum.
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam aperiam provident tempora? 
-        Cumque adipisci, non dolorem quia, odit qui alias veniam excepturi rem dolor fugit dignissimos, 
-        sed voluptatum blanditiis harum.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam aperiam provident tempora? 
-        Cumque adipisci, non dolorem quia, odit qui alias veniam excepturi rem dolor fugit dignissimos,
-        sed voluptatum blanditiis harum.
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam aperiam provident tempora? 
-        Cumque adipisci, non dolorem quia, odit qui alias veniam excepturi rem dolor fugit dignissimos, 
-        sed voluptatum blanditiis harum.</p>    
+<!-- Homepage Hero -->
+  <div class="hero">
+    <p>Hello, I am </p>
+    <h1>Lynn Mach</h1>
+    <h2 class="mb-5 text-wrap">Front-end developer based in Seattle, WA</h2>
+
+    <div>
+    <a href="/about.html" class="btn btn-branding">About Me</a>
+      </div>
 
 </div>
-</div>
+
+<!-- Adding content -->
+<div class="container">
+    <div class="row">
+        <div class="col-md-6">
+            <img src="images/yoga.jpg" class="img-fluid rounded shadow-sm p-2 border" />
+                 </div>
+        <div class="col-md-6">
+            <h3 id="lets_connect">LET'S CONNECT</h3> 
+            <ul class="nav justify-content-center">
+                <li class="nav-item"><a class="nav-link active" aria-current="page" href="https://www.linkedin.com/in/lmach99/" target="_blank">LinkedIn</a></li>
+                <li class="nav-item"><a class="nav-link" href="https://www.instagram.com/lmach999" target="_blank">Instagram</a></li>
+                <li class="nav-item"><a class="nav-link" href="mailto:lmach99@yahoo.com" target="_blank">Email</a></li>
+                <li class="nav-item"><a class="nav-link" href="https://github.com/Giggles999" target="_blank">GitHub</a></li>
+                <li class="nav-item"><a class="nav-link" href="http://www.lynnmach.com/" target="_blank">My Artwork</a></li>
+            </ul>
+    </div> </div> 
+  
+
+  
+  </div> 
+
+
+
+
 
 
 <script src="/src/index.js"></script>
 </body>
 </html>
-
-
-
-
-
-
 
