--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <aside class="nav-sidebar">
     <ul>
       <li><a href="/about.html">About Me</a></li>
-      <li><a href="/about.html">Contact</a></li>
+      <li><a href="/contact.html">Contact</a></li>
       <li><a href="/about.html">Something</a></li>
       <li><span>Projects</span></li>
       <li><a href="/projects.html">Weather App</a></li>
