--- a/contact.html
+++ b/contact.html
@@ -68,7 +68,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-6">
-            <img src="images/yoga.jpg" class="img-fluid rounded shadow-sm p-2 border" />
+            <img src="/images/connect.jpg" class="img-fluid rounded shadow-sm p-2 border" />
                  </div>
         <div class="col-md-6">
             <h3 id="lets_connect">LET'S CONNECT</h3> 
