added footer to pages

--- a/contact.html
+++ b/contact.html
@@ -87,6 +87,29 @@
 
 
 
+<!-- Footer -->
+<div class="card text-center">
+    <div class="card-header">
+      Featured
+    </div>
+    
+  <div class="card-body">
+      <h5 class="card-title">Lets Connect</h5>
+      <p class="card-text">Lets work together and I'll help you with all my best</p>
+      <a href="#" class="btn btn-primary">Lets talk here</a>
+    </div>
+    
+  <div class="card-footer text-muted">
+      <div class="footer-media">
+        <div class="col-sm-4 text-center"></div>
+        <div class="col-sm-4 text-center">
+            <a href="https://www.instagram.com/lmach999/"; target="_blank"><i class="fab fa-instagram"></i></a> 
+            <a href="https://www.linkedin.com/in/lmach99/"; target="_blank"><i class="fab fa-linkedin"></i></a> 
+            <a href="https://github.com/Giggles999"; target="_blank"><i class="fab fa-github"></i></a>
+                  </div> 
+        <div class="col-sm-4 text-center"></div>     
+    </div>
+  
 
 
 
