added link to btn

--- a/projects.html
+++ b/projects.html
@@ -109,7 +109,7 @@
   <div class="card-body">
       <h5 class="card-title">Lets Connect</h5>
       <p class="card-text">Lets work together and I'll help you with all my best</p>
-      <a href="#" class="btn btn-primary">Lets talk here</a>
+      <a href="/contact.html#lets_connect" class="btn btn-primary">Lets talk here</a>
     </div>
     
   <div class="card-footer text-muted">
